force-app/main/default/objects/pitstop__c/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <label>duration</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>