force-app/main/default/objects/pitstop__c/fields/lap__c.field-meta.xml
<CustomField>
    <fullName>lap__c</fullName>
    <label>Lap</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>