force-app/main/default/objects/pitstop__c/fields/Pitstop_id__c.field-meta.xml
<CustomField>
    <fullName>Pitstop_id__c</fullName>
    <externalId>true</externalId>
    <label>Pitstop id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>