force-app/main/default/objects/pitstop__c/fields/season__c.field-meta.xml
<CustomField>
    <fullName>season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>season</label>
    <referenceTo>season__c</referenceTo>
    <relationshipLabel>Pitstops</relationshipLabel>
    <relationshipName>Pitstops</relationshipName>
    <type>Lookup</type>
</CustomField>