force-app/main/default/objects/pitstop__c/fields/stop__c.field-meta.xml
<CustomField>
    <fullName>stop__c</fullName>
    <label>Stop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>