force-app/main/default/objects/pitstop__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>